# azote

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CREDITS.md  MANIFEST.in  README.md  azote.sh  install.sh  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
azote/: __about__.py  color_tools.py  colors-wiki  colorthief.py  common.py  convert_colors.py  main.py  plugins.py  tools.py
azote/langs/: cs_CZ.json  de_DE.json  en_US.json  fr_FR.json  it_IT.json  pl_PL.json  pt_BR.json  ru_RU.json  tr_TR.json
azote/languages/: README.md  de_DE  en_EN  fr_FR  pl_PL
